--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "indexify",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "indexify": "./bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +14,12 @@
   "bugs": {
     "url": "https://github.com/tan-t/indexify/issues"
   },
-  "homepage": "https://github.com/tan-t/indexify#readme"
+  "homepage": "https://github.com/tan-t/indexify#readme",
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "clui": "^0.3.6",
+    "figlet": "^1.2.0",
+    "hogan.js": "^3.0.2",
+    "object-hash": "^1.1.8"
+  }
 }
