--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/tan-t/indexify#readme",
   "dependencies": {
     "chalk": "^1.1.3",
+    "clear": "0.0.1",
     "clui": "^0.3.6",
     "figlet": "^1.2.0",
     "hogan.js": "^3.0.2",
